--- a/src/DiscordBot/DiscordBotAPI/DiscordBotAPI.csproj
+++ b/src/DiscordBot/DiscordBotAPI/DiscordBotAPI.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="3.18.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
