--- a/src/DiscordBot/DiscordBotAPI/DiscordBotAPI.csproj
+++ b/src/DiscordBot/DiscordBotAPI/DiscordBotAPI.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,7 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Commands\" />
   </ItemGroup>
 
